samples/_failures_safe/1761723466_71422c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b6e4c2f1.c: In function ‘main’:
./samples/SAFE/__tmp_b6e4c2f1.c:138:12: error: missing terminating " character
  138 |     printf("\nWord
      |            ^~~~~~~
./samples/SAFE/__tmp_b6e4c2f1.c:138:5: error: expected expression at end of input
  138 |     printf("\nWord
      |     ^~~~~~
./samples/SAFE/__tmp_b6e4c2f1.c:138:5: error: expected declaration or statement at end of input
